Update deployment and implementation documentation for FFmpeg + R2 SSAI system. Enhance admin API with ads library functionality, including ad upload and management. Introduce new database schema for SCTE-35 and VAST configurations, and implement caching strategies for improved performance. Add monitoring and logging features for better observability. Update frontend to support ad selection from the library and improve user experience.

--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "@cloudflare/workers-types": "^4.20241022.0",
     "tsx": "^4.7.0",
     "wrangler": "^4.45.3"
+  },
+  "dependencies": {
+    "@cloudflare/containers": "^0.0.30"
   }
 }
