Fix critical timing issues in ad segment handling: auto-detect content segment duration to ensure accurate ad skip calculations, parse actual ad durations for correct playback, and maintain Program Date Time (PDT) continuity across ad segments. This resolves stream stuttering and playback failures, particularly in Safari. Update cache settings for improved ad timing. All changes are deployed and production-ready.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -61,7 +61,7 @@ DECISION_TIMEOUT_MS = "2000"  # Increased to 2 seconds for database queries
 SIGN_HOST = "pub-24423d0273094578a7f498bd462c2e20.r2.dev"
 # Cache settings for HLS delivery (Safari compatibility)
 SEGMENT_CACHE_MAX_AGE = "60"                             # Segments are immutable, cache longer
-MANIFEST_CACHE_MAX_AGE = "4"                             # Manifests update frequently
+MANIFEST_CACHE_MAX_AGE = "2"                             # Reduced from 4s: better ad timing (industry standard)
 # Dev/testing mode - allows access without JWT authentication (set to "0" for production)
 DEV_ALLOW_NO_AUTH = "1"
 # tokens & keys set as secrets: JWT_PUBLIC_KEY, SEGMENT_SECRET
