Refactor slate handling and update decision-making logic in ad management
Renamed slate_pod_id to slate_id for consistency across the codebase. Introduced new functions to retrieve slates from the database, allowing for better management of default slates per organization. Removed legacy slate pod handling and fallback mechanisms, ensuring a streamlined approach to ad decision-making. Updated configuration settings to disable caching for testing purposes and improved error handling in decision processes. Enhanced logging for better traceability of slate-related operations.

--- a/wrangler.decision.toml
+++ b/wrangler.decision.toml
@@ -28,8 +28,7 @@ service = "cf-ssai-vast-parser"
 [vars]
 AD_POD_BASE = "https://pub-24423d0273094578a7f498bd462c2e20.r2.dev/transcoded-ads"
 DECISION_TIMEOUT_MS = "2000"
-CACHE_DECISION_TTL = "60"
-SLATE_POD_ID = "slate"
+CACHE_DECISION_TTL = "0"  # Disabled for testing - set to 60 in production
 # VAST_URL = "https://example.com/vast.xml"  # Optional: Static VAST URL for testing
 
 # Secrets (optional - for external ad API)
