feat: Phase 2 - SCTE-35 Monitor Cron Worker (initial)
- Create scte35-monitor-worker.ts with cron-based polling
- Fetch all active channels from D1
- Poll origin manifests for SCTE-35 signals
- Pre-calculate ad decisions proactively
- Write ad break state to KV
- Add wrangler-scte35-monitor.toml configuration
- Add dev and deploy scripts to package.json

Features:
- Parallel processing of all channels
- Deduplication (skip already-processed events)
- Pre-calculated decisions (zero request-time latency)
- Comprehensive logging and error handling

Phase 2: Moves SCTE-35 detection OUT of request path

--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "dev:beacon": "wrangler dev --local --port 8789 --config wrangler.beacon.toml",
     "dev:vast": "wrangler dev --local --port 8790 --config wrangler.vast.toml",
     "dev:admin-api": "wrangler dev --local --port 8791 --config wrangler.admin.toml",
+    "dev:scte35-monitor": "wrangler dev --local --port 8792 --config wrangler-scte35-monitor.toml --test-scheduled",
     "dev:guard": "wrangler dev --local src/segment-guard.ts",
     "deploy:manifest": "wrangler deploy",
     "deploy:decision": "wrangler deploy --config wrangler.decision.toml",
     "deploy:beacon": "wrangler deploy --config wrangler.beacon.toml",
     "deploy:vast": "wrangler deploy --config wrangler.vast.toml",
     "deploy:admin-api": "wrangler deploy --config wrangler.admin.toml",
-    "deploy:all": "npm run deploy:manifest && npm run deploy:decision && npm run deploy:beacon && npm run deploy:vast && npm run deploy:admin-api",
+    "deploy:scte35-monitor": "wrangler deploy --config wrangler-scte35-monitor.toml",
+    "deploy:all": "npm run deploy:manifest && npm run deploy:decision && npm run deploy:beacon && npm run deploy:vast && npm run deploy:admin-api && npm run deploy:scte35-monitor",
     "db:create": "wrangler d1 create ssai-admin",
     "db:init": "wrangler d1 execute ssai-admin --file=./schema.sql --config wrangler.admin.toml --remote",
     "db:init:local": "wrangler d1 execute ssai-admin --file=./schema.sql --config wrangler.admin.toml",
