--- a/wrangler-scte35-monitor.toml
+++ b/wrangler-scte35-monitor.toml
@@ -26,8 +26,20 @@ preview_id = "3b89bcc0ea0e412dbb06c5c507239575"
 binding = "DECISION"
 service = "cf-ssai-decision"
 
+# Durable Object for per-channel SCTE-35 monitoring
+[[durable_objects.bindings]]
+name = "SCTE35_MONITOR"
+class_name = "SCTE35MonitorDO"
+script_name = "cf-ssai-scte35-monitor"
+
+# Migration for DO (run once)
+[[migrations]]
+tag = "v1"
+new_classes = ["SCTE35MonitorDO"]
+
 # Configuration
 [vars]
+SCTE35_POLL_INTERVAL_MS = "5000"  # 5 seconds
 DECISION_TIMEOUT_MS = "2000"
 
 # Observability
