Refactor deployment success documentation and enhance admin dashboard details
- Updated the deployment success message to reflect a successful deployment of the CF-SSAI platform.
- Streamlined the admin dashboard section with clearer access instructions and features.
- Added deployment details including worker statuses and URLs.
- Improved testing instructions and emphasized security configurations for production readiness.
- Enhanced the README with additional documentation links for deployment and testing.

--- a/wrangler.decision.toml
+++ b/wrangler.decision.toml
@@ -19,10 +19,20 @@ bucket_name = "ssai-ads"
 binding = "DECISION_CACHE"
 id = "4beba810f4d141e7be9e3298c7b07944"
 
+# KV for on-demand transcode locks
+[[kv_namespaces]]
+binding = "KV"
+id = "4beba810f4d141e7be9e3298c7b07944"
+
 # Service binding to VAST parser worker
 [[services]]
 binding = "VAST_PARSER"
 service = "cf-ssai-vast-parser"
+
+# Queue for transcode jobs (optional - for on-demand transcoding)
+[[queues.producers]]
+binding = "TRANSCODE_QUEUE"
+queue = "transcode-queue"
 
 # Configuration
 [vars]
